Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "#@title 1.WebUIのインストール\n",
         "#パッケージインストール\n",
-        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.16/xformers-0.0.16+814314d.d20230118-cp38-cp38-linux_x86_64.whl\n",
+        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.17/xformers-0.0.17+b6be33a.d20230315-cp39-cp39-linux_x86_64.whl\n",
         "!pip install -q --pre triton\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
@@ -30,30 +30,35 @@
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
+        "#WebUIの拡張機能(Extensions)\n",
+        "Extensions = True #@param {'type':'boolean'}\n",
+        "if Extensions == True :\n",
+        "  !git clone https://github.com/toshiaki1729/stable-diffusion-webui-dataset-tag-editor.git /content/stable-diffusion-webui/extensions/dataset-tag-editor\n",
+        "  !git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
+        "  !git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
+        "  !git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
+        "  !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-two-shot\n",
+        "  !git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
+        "  !git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities\n",
+        "\n",
+        "ControlNet = True #@param {'type':'boolean'}\n",
+        "if ControlNet == True :\n",
+        "  !git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
+        "  !git clone https://github.com/Mikubill/sd-webui-controlnet.git /content/stable-diffusion-webui/extensions/sd-webui-controlnet\n",
+        "  !git clone https://github.com/jexom/sd-webui-depth-lib /content/stable-diffusion-webui/extensions/sd-webui-depth-lib\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_canny-fp16.safetensors\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_depth-fp16.safetensors\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_hed-fp16.safetensors\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_mlsd-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_mlsd-fp16.safetensorss\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_normal-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_normal-fp16.safetensors\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_openpose-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_openpose-fp16.safetensors\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_scribble-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_scribble-fp16.safetensors\n",
+        "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_seg-fp16.safetensors\n",
+        "\n",
         "%cd /content/stable-diffusion-webui\n",
         "#EasyNegative\n",
         "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title　WebUIの拡張機能（任意）\n",
-        "#WebUIの拡張機能(Extensions)\n",
-        "!git clone https://github.com/toshiaki1729/stable-diffusion-webui-dataset-tag-editor.git /content/stable-diffusion-webui/extensions/dataset-tag-editor\n",
-        "!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
-        "!git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
-        "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
-        "!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-two-shot\n",
-        "!git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
-        "!git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities"
-      ],
-      "metadata": {
-        "id": "Ffo4Tysh4a8h",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -67,7 +72,7 @@
         "#@title  2.モデル選択\n",
         "#@markdown モデルを選択してから実行してください。\n",
         "\n",
-        "model_name =\"8528-diffusion\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\",\"ACertainModel\",\"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"Counterfeit-V2.5\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\",\"ACertainModel\",\"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
         "if model_name == \"stable_diffusion_v1.5\":\n",
         "  url1  = \"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\"\n",
         "  path1 = \"/content/stable-diffusion-webui/models/Stable-diffusion/v1-5-pruned-emaonly.ckpt\"\n",
@@ -315,33 +320,14 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title　ControlNet（任意）\n",
-        "!git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
-        "!git clone https://github.com/Mikubill/sd-webui-controlnet.git /content/stable-diffusion-webui/extensions/sd-webui-controlnet\n",
-        "!git clone https://github.com/jexom/sd-webui-depth-lib /content/stable-diffusion-webui/extensions/sd-webui-depth-lib\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_canny-fp16.safetensors\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_depth-fp16.safetensors\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_hed-fp16.safetensors\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_mlsd-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_mlsd-fp16.safetensorss\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_normal-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_normal-fp16.safetensors\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_openpose-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_openpose-fp16.safetensors\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_scribble-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_scribble-fp16.safetensors\n",
-        "!wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_seg-fp16.safetensors"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "JYd4pMf8AVmR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title  LoRA（任意）\n",
-        "Lora_name =\"Yelan_LoRA\" #@param [\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
+        "#@title  LoRA･Textual Inversion（任意）\n",
+        "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
-        "if Lora_name == \"Anime_Screencap_Style_LoRA\":\n",
+        "if Lora_name == \"None\":\n",
+        "  url3  = None \n",
+        "  path3 = None\n",
+        "\n",
+        "elif Lora_name == \"Anime_Screencap_Style_LoRA\":\n",
         "  url3  = \"https://civitai.com/api/download/models/5742\" \n",
         "  path3 = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/Anime_Screencap_Style_LoRA.safetensors\"\n",
         "\n",
@@ -408,20 +394,14 @@
         "else:\n",
         "  print(\"Invalid Lora name.\")\n",
         "\n",
-        "!wget $url3 -O $path3\n"
-      ],
-      "metadata": {
-        "id": "QDG0oyNU6R1L",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Textual Inversion（任意）\n",
-        "Textual_name =\"Corneo's Makima\"#@param [\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "!wget $url3 -O $path3\n",
+        "\n",
+        "#Textual Inversion\n",
+        "Textual_name =\"None\"#@param [\"None\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "\n",
+        "if Textual_name == \"None\":\n",
+        "  url4  = None \n",
+        "  path4 = None\n",
         "\n",
         "if Textual_name == \"Corneo's Makima\":\n",
         "  url4  = \"https://civitai.com/api/download/models/6197\"\n",
@@ -489,7 +469,7 @@
         "!wget $url4 -O $path4"
       ],
       "metadata": {
-        "id": "BboYHW-jEnb-",
+        "id": "QDG0oyNU6R1L",
         "cellView": "form"
       },
       "execution_count": null,
