Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -320,7 +320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title  LoRA･Textual Inversion（任意）\n",
+        "#@title  LoRA･Textual Inversion･Lycoris（任意）\n",
         "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
         "if Lora_name == \"None\":\n",
@@ -466,7 +466,11 @@
         "else:\n",
         "  print(\"Invalid model name.\")\n",
         "\n",
-        "!wget $url4 -O $path4"
+        "!wget $url4 -O $path4\n",
+        "\n",
+        "#Lycoris\n",
+        "Lycoris_name =\"None\"#@param [\"None\"] {allow-input:false}\n",
+        "#準備中"
       ],
       "metadata": {
         "id": "QDG0oyNU6R1L",
