Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -56,10 +56,8 @@
         "#@title  2.モデル選択とWebUIの起動 \n",
         "#@markdown モデルを選択してから実行してください。\n",
         "                                \n",
-        "model_name =\"anything-v4.0\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\"] {allow-input: false}\n",
+        "model_name =\"AbyssOrangeMix2\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo's 7th Heaven Mix\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
-        "#↓モデルの選択欄に表示されていないのでご自身で追加or削除してください。\n",
-        "#\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo's 7th Heaven Mix\"\n",
         "\n",
         "if model_name == \"stable_diffusion_v1.5\":\n",
         "  url1  = \"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\"\n",
@@ -187,9 +185,6 @@
         "  url2  = \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\" \n",
         "  path2 = \"/content/stable-diffusion-webui/models/Stable-diffusion/kl-f8-anime.vae.pt\"\n",
         "\n",
-        "#ここから下はモデルの選択の欄にないので\n",
-        "#お好みでカスタマイズしてください。\n",
-        "\n",
         "elif model_name == \"7th_anime_v1.1\":\n",
         "  url1  = \"https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v1/7th_anime_v1.1.safetensors\" \n",
         "  path1 = \"/content/stable-diffusion-webui/models/Stable-diffusion/7th_anime_v1.1.safetensors\"\n",
@@ -251,6 +246,18 @@
         "  url2  =  None\n",
         "  path2 =  None\n",
         "\n",
+        "elif model_name == \"ChilloutMix\":\n",
+        "  url1  = \"https://civitai.com/api/download/models/11745\"\n",
+        "  path1 = \"/content/stable-diffusion-webui/models/Stable-diffusion/ChilloutMix.safetensors\"\n",
+        "  url2  =  None\n",
+        "  path2 =  None\n",
+        "\n",
+        "elif model_name == \"wd-1-5-beta2\":\n",
+        "  url1  = \"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\"\n",
+        "  path1 = \"/content/stable-diffusion-webui/models/Stable-diffusion/wd-1-5-beta2-aesthetic-fp16.safetensors\"\n",
+        "  url2  =  None\n",
+        "  path2 =  None\n",
+        "  \n",
         "else:\n",
         "  print(\"Invalid model name.\")\n",
         " \n",
