Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -290,12 +290,13 @@
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
         "▼学習済みモデルの検索<br>\n",
-        "[HuggingFace](https://huggingface.co/)<br><br>\n",
+        "[HuggingFace](https://huggingface.co/ckpt)<br><br>\n",
         "▼Colabページの説明<br>\n",
         "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
         "<br>\n",
         "▼上級者向け<br>\n",
-        "[Nios_v2_update](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br>"
+        "[Nios_v2_update.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br>\n",
+        "[Nios_v3.ipynb](https://colab.research.google.com/github/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_v3.ipynb)<br>"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
