Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -320,7 +320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 追加学習モデル LoRA･Textual Inversion･Lycoris（任意）\n",
+        "#@title  LoRA･Textual Inversion･Lycoris（任意）\n",
         "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
         "if Lora_name == \"None\":\n",
@@ -497,7 +497,7 @@
       "cell_type": "markdown",
       "source": [
         "▼学習済みモデルの検索<br>\n",
-        "[HuggingFace](https://huggingface.co/)<br>\n",
+        "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
         "複数選びたい場合は選択し直して再度実行<br>\n",
         "1以外は何回実行しても構いません<br>\n",
@@ -517,13 +517,13 @@
         "▼記事<br>\n",
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
-        "▼不具合で起動できない時<br>\n",
+        "▼新バージョン<br>\n",
         "[Nios_v3.ipynb](https://colab.research.google.com/github/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_v3.ipynb)<br>\n",
         "<br>\n",
         "▼ColabでLoRA学習したい人向け<br>\n",
         "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
         "もしくはこちら<br>\n",
-        "[【Stable Diffusion】Loraモデル学習をGoogle Colabで作る方法解説。](https://www.youtube.com/watch?v=OzDW0_sCwEw&t=67s&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)\n"
+        "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)\n"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
