--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -522,20 +522,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)**<br><br> \n",
         "▼学習済みモデルの検索<br>\n",
-        "[HuggingFace](https://huggingface.co/)<br>\n",
+        "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
         "▼Colabページの説明<br>\n",
         "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
         "<br>\n",
+        "▼以前のバージョン<br>\n",
+        "[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br><br> \n",
         "▼記事<br>\n",
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
         "▼ColabでLoRA学習したい人向け<br>\n",
         "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
         "もしくはこちら<br>\n",
-        "[【Stable Diffusion】Loraモデル学習をGoogle Colabで作る方法解説。](https://www.youtube.com/watch?v=OzDW0_sCwEw&t=67s&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)"
+        "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
