Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -36,7 +36,7 @@
         "!rm *.deb\n",
         "\n",
         "!apt -y install -qq aria2\n",
-        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.17/xformers-0.0.17+b6be33a.d20230315-cp39-cp39-linux_x86_64.whl\n",
+        "!pip install -q --pre xformers\n",
         "!pip install -q --pre triton\n",
         "\n",
         "#WebUIのインストール\n",
@@ -507,10 +507,11 @@
       "source": [
         "#@title  4.WebUIの起動\n",
         "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
+        "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
         "\n",
         "!mkdir /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui/models\n",
         "\n",
-        "!python launch.py --share --xformers --enable-insecure-extension-access --theme dark --gradio-queue --cloudflared"
+        "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
       ],
       "metadata": {
         "id": "Pet8RD2Q6-4L",
