Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -40,6 +40,7 @@
         "  !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-two-shot\n",
         "  !git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
         "  !git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities\n",
+        "  !git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-locon\n",
         "\n",
         "ControlNet = True #@param {'type':'boolean'}\n",
         "if ControlNet == True :\n",
