--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -21,6 +21,7 @@
       "source": [
         "#@title 1.WebUIのインストール\n",
         "\n",
+        "%cd /content\n",
         "import os\n",
         "from google.colab.output import eval_js\n",
         "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
@@ -35,9 +36,11 @@
         "%env LD_PRELOAD=libtcmalloc.so\n",
         "!rm *.deb\n",
         "\n",
+        "!pip install torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cu116 -U\n",
         "!apt -y install -qq aria2\n",
-        "!pip install -q --pre xformers\n",
+        "!pip install -q --pre xformers==0.0.17.dev476 -U\n",
         "!pip install -q --pre triton\n",
+        "\n",
         "\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
