--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -542,10 +542,12 @@
         "▼記事<br>\n",
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
-        "▼ColabでLoRA学習したい人向け<br>\n",
+        "▼ColabでLoRA学習<br>\n",
         "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
         "もしくはこちら<br>\n",
-        "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)"
+        "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)<br>\n",
+        "もしくはこちら<br>\n",
+        "[【StableDiffusion】初めてのAIお絵かき講座 その4 キャラや絵柄を追加学習！LoRA編【Anything V4.5】](https://www.nicovideo.jp/watch/sm41895651)\n"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
