Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -499,19 +499,8 @@
       "source": [
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
-        "[Civitai](https://civitai.com/)<br><br>\n",
-        "複数選びたい場合は選択し直して再度実行<br>\n",
-        "1以外は何回実行しても構いません<br>\n",
-        "頻繁にモデルを切り替えるとエラーが発生します<br>\n",
-        "Hires.fixは負担が大きいので設定には注意してください\n"
-      ],
-      "metadata": {
-        "id": "r2DmT0JqVIYG"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "[Civitai](https://civitai.com/)<br>\n",
+        "<br>\n",
         "▼Colabページの説明<br>\n",
         "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
         "<br>\n",
@@ -521,10 +510,15 @@
         "▼記事<br>\n",
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
-        "▼ColabでLoRA学習したい人向け<br>\n",
+        "▼ColabでLoRA学習<br>\n",
+        "[Linaqruf/kohya-trainer](https://github.com/Linaqruf/kohya-trainer)\n",
+        "<br>\n",
         "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
         "もしくはこちら<br>\n",
-        "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)\n"
+        "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)<br>\n",
+        "もしくはこちら<br>\n",
+        "[【StableDiffusion】初めてのAIお絵かき講座 その4 キャラや絵柄を追加学習！LoRA編【Anything V4.5】](https://www.nicovideo.jp/watch/sm41895651)\n",
+        "\n"
       ],
       "metadata": {
         "id": "4iNjTp_bGOpO"
