Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -321,6 +321,43 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title カスタムモデル(任意)\n",
+        "model_type =\"Checkpoint\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
+        "if model_type ==\"Checkpoint\":\n",
+        "    pretrained_model == \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "elif model_type =\"Texual_Inversion\":\n",
+        "    pretrained_model == \"/content/stable-diffusion-webui/embeddings\"\n",
+        "elif model_type =\"LoRA\":\n",
+        "    pretrained_model == \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
+        "elif model_type =\"LyCORIS\":\n",
+        "    pretrained_model == \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
+        "  \n",
+        "modelUrl = \"\"  # @param {'type': 'string'}\n",
+        "def install(url):\n",
+        "    base_name = os.path.basename(url)\n",
+        "\n",
+        "    if url.startswith(\"https://drive.google.com\"):\n",
+        "        os.chdir(pretrained_model)\n",
+        "        !gdown --fuzzy {url}\n",
+        "    elif url.startswith(\"https://huggingface.co/\"):\n",
+        "        if \"/blob/\" in url:\n",
+        "            url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "        hf_token = \"\"  # @param {type:\"string\"}\n",
+        "        user_header = f'\"Authorization: Bearer {hf_token}\"'\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "    else:\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "LuEJIAHLGXEu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title  LoRA･Textual Inversion･Lycoris（任意）\n",
         "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
