Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -372,6 +372,7 @@
         "    elif url.startswith(\"https://huggingface.co/\"):\n",
         "        if \"/blob/\" in url:\n",
         "            url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "                #@markdown ▼プライベートモデルを使用する場合、huggingfaceのアクセストークンを入力してください。\n",
         "        hf_token = \"\"  # @param {type:\"string\"}\n",
         "        user_header = f'\"Authorization: Bearer {hf_token}\"'\n",
         "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
