--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -342,6 +342,7 @@
         "    elif url.startswith(\"https://huggingface.co/\"):\n",
         "        if \"/blob/\" in url:\n",
         "            url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "        #@markdown ▼プライベートモデルを使用する場合、huggingfaceのアクセストークンを入力してください。\n",
         "        hf_token = \"\"  # @param {type:\"string\"}\n",
         "        user_header = f'\"Authorization: Bearer {hf_token}\"'\n",
         "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
@@ -358,7 +359,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title  LoRA･Textual Inversion･Lycoris（任意）\n",
+        "#@title  追加学習モデル LoRA･Textual Inversion･Lycoris（任意）\n",
         "Lora_name =\"None\" #@param [\"None\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
         "if Lora_name == \"None\":\n",
