Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -325,11 +325,11 @@
         "model_type =\"Checkpoint\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
         "if model_type ==\"Checkpoint\":\n",
         "    pretrained_model == \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "elif model_type =\"Texual_Inversion\":\n",
+        "elif model_type ==\"Texual_Inversion\":\n",
         "    pretrained_model == \"/content/stable-diffusion-webui/embeddings\"\n",
-        "elif model_type =\"LoRA\":\n",
+        "elif model_type == \"LoRA\":\n",
         "    pretrained_model == \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "elif model_type =\"LyCORIS\":\n",
+        "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model == \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
@@ -342,9 +342,9 @@
         "    elif url.startswith(\"https://huggingface.co/\"):\n",
         "        if \"/blob/\" in url:\n",
         "            url = url.replace(\"/blob/\", \"/resolve/\")\n",
-        "        #@markdown ▼プライベートモデルを使用する場合、huggingfaceのアクセストークンを入力してください。\n",
-        "        hf_token = \"\"  # @param {type:\"string\"}\n",
-        "        user_header = f'\"Authorization: Bearer {hf_token}\"'\n",
+        "                #@markdown ▼プライベートモデルを使用する場合、huggingfaceのアクセストークンを入力してください。\n",
+        "        huggingface_token = \"\"  # @param {type:\"string\"}\n",
+        "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
         "    else:\n",
         "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n"
