Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -353,14 +353,14 @@
       "source": [
         "#@title カスタムモデル(任意)\n",
         "model_type =\"Checkpoint\" #@param [\"Checkpoint\",\"Texual_Inversion\",\"LoRA\",\"LyCORIS\"] {allow-input: false}\n",
-        "if model_type ==\"Checkpoint\":\n",
-        "    pretrained_model == \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "if model_type == \"Checkpoint\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
-        "    pretrained_model == \"/content/stable-diffusion-webui/embeddings\"\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"LoRA\":\n",
-        "    pretrained_model == \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
-        "    pretrained_model == \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "  \n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         "def install(url):\n",
@@ -377,7 +377,9 @@
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
         "    else:\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n"
+        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "\n",
+        "install(modelUrl)"
       ],
       "metadata": {
         "cellView": "form",
@@ -423,7 +425,7 @@
         "\n",
         "elif Lora_name == \"Mona_LoRA\":\n",
         "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Mona/Mona_mediumpruned.safetensors\" \n",
-        "  path3 = \"/content/stable-diffusion-webui/models/Lora/Mona_LoRA.safetensors\"\n",
+        "  path3 = \"Mona_LoRA.safetensors\"\n",
         "\n",
         "elif Lora_name == \"Ganyu_LoRA\":\n",
         "  url3  = \"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Ganyu/Ganyu_Medium.safetensors\" \n",
