--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -38,8 +38,8 @@
         "\n",
         "!pip install torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cu116 -U\n",
         "!apt -y install -qq aria2\n",
-        "!pip install -q --pre xformers==0.0.17.dev476 -U\n",
-        "!pip install -q --pre triton\n",
+        "!pip install -q xformers==0.0.16\n",
+        "!pip install -q triton==2.0.0\n",
         "\n",
         "\n",
         "#WebUIのインストール\n",
@@ -555,7 +555,7 @@
       "source": [
         "#@title  4.WebUIの起動\n",
         "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
-        "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
+        "!sed -i -e 's/fastapi==0.94.0/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
         "\n",
         "!mkdir /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui/models\n",
         "\n",
