--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -44,13 +44,14 @@
         "\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
+        "#Extensions1\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "\n",
-        "#Extensions\n",
+        "#Extensions2\n",
         "Extensions = True #@param {'type':'boolean'}\n",
         "if Extensions == True :\n",
         "  !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui\n",
@@ -62,11 +63,14 @@
         "  !git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
         "  !git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities\n",
         "  !git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-locon\n",
+        "  !git clone https://github.com/hnmr293/sd-webui-llul /content/stable-diffusion-webui/extensions/sd-webui-llul\n",
+        "  !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git /content/stable-diffusion-webui/extensions/Stable-Diffusion-Webui-Civitai-Helper\n",
+        "  !git clone https://github.com/hnmr293/sd-webui-cutoff /content/stable-diffusion-webui/extensions/sd-webui-cutoff\n",
         "\n",
         "%cd /content/stable-diffusion-webui\n",
         "!git reset --hard\n",
         "\n",
-        "#ControlNet\n",
+        "#Extensions3(ControlNet)\n",
         "ControlNet = True #@param {'type':'boolean'}\n",
         "if ControlNet == True :\n",
         "  !git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
